# SimpleRaytracer

./: CMakeLists.txt
include/: includes.h  nvec.h  rt_geo.h  rt_ray.h  rt_texture.h  rt_trace.h  util.h
src/: main.c  rt_texture.c  rt_trace.c
